force-app/main/default/objects/Peak_Image_Gallery__c.object
<CustomObject>
    <fields>
        <fullName>Default_Image__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Default Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Image_Gallery_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Gallery ID</label>
        <type>Text</type>
    </fields>
    <label>Peak Image Gallery</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Image Gallery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Galleries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>